--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "prettier": "^2.8.4",
     "vite": "^4.1.0",
     "vite-plugin-mkcert": "^1.13.3"
+  },
+  "dependencies": {
+    "i": "^0.3.7"
   }
 }
