--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.7",
     "vite": "^4.1.0",
     "vite-plugin-mkcert": "^1.13.3"
   }
