--- a/package.json
+++ b/package.json
@@ -5,18 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && surge ./dist itmo_2023_vasyutkin.surge.sh",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.7",
-    "vite": "^4.1.0",
-    "vite-plugin-mkcert": "^1.13.3"
-  },
-  "dependencies": {
-    "i": "^0.3.7"
+    "tailwindcss": "^3.3.0",
+    "vite": "^4.2.0"
   }
 }
