--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.42",
+    "@unocss/preset-icons": "^0.50.6",
+    "@unocss/preset-uno": "^0.50.6",
+    "@unocss/preset-web-fonts": "^0.50.6",
+    "@unocss/vite": "^0.50.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0",
+    "unocss": "^0.50.6",
     "vite": "^4.2.0"
+  },
+  "dependencies": {
+    "@unocss/reset": "^0.50.6"
   }
 }
