--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
-  "name": "itmo-webdev-2023-vasyutkin",
+  "name": "itmo-webdev-2023-vladimirminkin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "e2e:open": "cypress open",
+    "e2e:run": "npm run build && npm run preview | cypress run",
+    "server:json": "json-server ./db.json -w"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.42",
     "@unocss/preset-icons": "^0.50.6",
     "@unocss/preset-uno": "^0.50.6",
     "@unocss/preset-web-fonts": "^0.50.6",
-    "@unocss/vite": "^0.50.6",
+    "@unocss/reset": "^0.50.6",
     "autoprefixer": "^10.4.14",
+    "cypress": "^12.10.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
     "tailwindcss": "^3.3.0",
     "unocss": "^0.50.6",
     "vite": "^4.2.0"
   },
+  "prettier": {
+    "printWidth": 80,
+    "singleQuote": true
+  },
   "dependencies": {
-    "@unocss/reset": "^0.50.6"
+    "toastify-js": "^1.12.0"
   }
 }
