--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
+  "semi": false,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "tabWidth": 2,
   "useTabs": false,
-  "printWidth": 100
+  "printWidth": 80
 }
