--- a/package.json
+++ b/package.json
@@ -1,35 +1,24 @@
 {
-  "name": "itmo-webdev-2023-vladimirminkin",
+  "name": "itmo-webdev-2023-vasyutkin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "e2e:open": "cypress open",
-    "e2e:run": "npm run build && npm run preview | cypress run",
-    "server:json": "json-server ./db.json -w"
-  },
-  "devDependencies": {
-    "@iconify/json": "^2.2.42",
-    "@unocss/preset-icons": "^0.50.6",
-    "@unocss/preset-uno": "^0.50.6",
-    "@unocss/preset-web-fonts": "^0.50.6",
-    "@unocss/reset": "^0.50.6",
-    "autoprefixer": "^10.4.14",
-    "cypress": "^12.10.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
-    "tailwindcss": "^3.3.0",
-    "unocss": "^0.50.6",
-    "vite": "^4.2.0"
-  },
-  "prettier": {
-    "printWidth": 80,
-    "singleQuote": true
+    "preview": "vite preview"
   },
   "dependencies": {
-    "toastify-js": "^1.12.0"
+    "vue": "^3.2.47"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.1.0",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.13.0",
+    "prettier": "^2.8.8",
+    "vite": "^4.3.2",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
